# guut-evaluation

./: .gitattributes  .gitignore  README.md  convert_notebook.py  emse_projects.tar.xz  guut_emse_results.tar.xz  old_benchmark_data.tar.xz  pynguin_emse_results.tar.xz  pynguin_emse_tests.tar.xz
01_initial_benchmark_v0.1/: stats.py
03_cosmic_ray_v0.3/: cosmic_ray_comparison.txt  stats.py
04_new_prompt_v0.4/: compare_killed_mutants.py
docker_image/: docker_image.tar.xz  run_image.sh
docker_image_files/: run_image.sh
guut/: example.config.py  pyproject.toml
guut/guut/: __main__.py  baseline_loop.py  cli.py  config.py  cosmic_ray.py  cosmic_ray_runner.py  debugger_wrapper.py  dummy_problem.py  execution.py  formatting.py  llm.py  logging.py  loop.py  output.py  parsing.py  problem.py  prompts.py  quixbugs.py
guut/guut/llm_endpoints/: llamacpp_endpoint.py  openai_endpoint.py  replay_endpoint.py  safeguard_endpoint.py
guut/guut/templates/: baseline_prompt.md  baseline_prompt_no_iterations.md  conversation_aborted_template.md  debug_prompt.md  debug_prompt_example.md  equivalence_claim_template.md  experiment_doesnt_compile_template.md  experiment_results_template.md  incomplete_response_template.md  problem_template.md  results_template.md  system_prompt.md  test_doesnt_compile_template.md  test_doesnt_detect_mutant_template.md  test_prompt.md
guut/scripts/: collect_all_valid_last_tests.py  collect_all_valid_tests.py  collect_result.py  collect_tests.py  costs.sh  quick_results.sh  quick_results_csv.sh
guut/tests/: formatting_test.py  loop_test.py
(+12915 files in other folders)
