[project]
name = "guut"
version = "0.6"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "llama-cpp-python>=0.2.90",
    "jinja2>=3.1.4",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "coverage>=7.6.1",
    "cosmic-ray>=8.3.15",
    "openai>=1.51.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["guut"]

[tool.pytest.ini_options]
addopts = "--ignore=stuff"
filterwarnings = ["error", "ignore::UserWarning"]

[tool.ruff]
exclude = ["venv", ".venv"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["guut"]
exclude = ["stuff"]
reportMissingImports = "error"
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "ipdb>=0.13.13",
    "plotly>=5.24.1",
    "pytest-cov>=5.0.0",
    "seaborn>=0.13.2",
    "scipy>=1.15.0",
    "nbformat>=5.10.4",
]

[tool.setuptools]
packages = ['guut']

[tool.setuptools.package-data]
"" = ['*.md']
